# eino

./: .gitignore  .gitmodules  CLAUDE.md  go.mod  go.sum
cmd/chat/: README.md  generate.go  generate_test.go  main.go  model.go  stream.go  template.go  template_test.go
components/: README.md
python/: CLAUDE.md
python/chat/: README.md  __init__.py  generate.py  main.py  model.py  pyproject.toml  requirements.txt  stream.py  template.py  test_launch.py
python/chat/tests/: __init__.py  test_generate.py  test_model.py  test_stream.py  test_template.py
schema/: README.md
